# lead_outreach

./: .gitignore  BUILD_SUMMARY.md  QUICKSTART.md  README.md  config.py  main.py  pyproject.toml  requirements.txt  start.sh
application/: database.py  models.py
application/routes/: business_routes.py  campaign_routes.py  main_routes.py  settings_routes.py  upload_routes.py
application/services/: analyzer.py  cleaner.py  pitch.py
application/utils/: crypto.py  file_handler.py  phone.py
data/: encryption.key  lead_outreach.db
templates/: .gitignore  base.html  business_detail.html  campaign_detail.html  dashboard.html  error.html  index.html  settings.html
templates/partials/: flash_messages.html  sidebar.html  topbar.html
templates/upload/: step1_upload.html  step2_preview.html  step3_confirm.html
uploads/: 20260309_121628_a359026a_sample_kisii_businesses.csv  20260309_123240_51e48a3d_cleaned_leads_for_sheets.csv
