[project]
name = "lead-outreach-tool-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography==41.0.7",
    "flask==3.0.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "phonenumbers==8.13.26",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "sqlalchemy>=2.0.40,<2.1.0",
    "urllib3==2.1.0",
    "werkzeug==3.0.1",
]
